--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,15 @@
+@import url("https://fonts.googleapis.com/css?family=Cinzel");
 body {
   font-family: "Helvetica", Arial, sans-serif;
   text-align: center;
+}
+
+select {
+  height: 2em;
+  padding: 0 1em;
+  margin: 0 1em;
+}
+
+.movie-list-filters {
+  margin: 1em 0;
 }
