--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -7,7 +7,8 @@
 
 .header h1 {
   margin: 0;
-  font-family: "Cinzel", Arial, cursive;
+  font-family: "Cinzel", "Times New Roman", Times, serif;
+  font-weight: 400;
   letter-spacing: 4px;
   font-size: 35px;
   color: #333;
