--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Cinzel");
+@import url("https://fonts.googleapis.com/css?family=Cinzel:400,700|Lato");
 body {
-  font-family: "Helvetica", Arial, sans-serif;
+  font-family: "Lato", "Helvetica", Arial, sans-serif;
   text-align: center;
+  background: #fff;
+  color: #474747;
 }
 
 select {
