--- a/src/components/movie/List.css
+++ b/src/components/movie/List.css
@@ -15,7 +15,6 @@
 
 .movie-item {
   padding: 20px;
-  cursor: pointer;
 }
 
 .movie-item:hover {
@@ -25,6 +24,15 @@
 .movie-item__title {
   font-family: "Cinzel", "Times New Roman", Times, serif;
   line-height: 1.5;
+}
+
+.movie-item__title a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.movie-item__title a:hover {
+  color: #333;
 }
 
 .movie-item__desc {
