--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -14,6 +14,15 @@
   color: #333;
 }
 
+.header h1 a {
+  color: #666;
+  text-decoration: none;
+}
+
+.header h1 a:hover {
+  color: #333;
+}
+
 @media (min-width: 800px) {
   .header h1 {
     font-size: 35px;
