--- a/src/components/movie/List.scss
+++ b/src/components/movie/List.scss
@@ -6,6 +6,7 @@
 
 .movie-item {
   padding: 20px 0;
+
   .movie-item__poster {
     width: 80%;
     max-width: 500px;
@@ -14,17 +15,21 @@
 
 .movie-item {
   padding: 0 0 20px 0;
+
   .movie-item__poster {
     width: 100%;
   }
 }
 
 .movie-item__title {
-  font-family: "Cinzel", "Times New Roman", Times, serif;
+  // font-family: "Cinzel", "Times New Roman", Times, serif;
   line-height: 1.5;
+  font-weight: 500;
+
   a {
     color: inherit;
     text-decoration: none;
+
     &:hover {
       color: #333;
     }
@@ -62,6 +67,7 @@
     display: inherit;
   }
 }
+
 /*Desktop Overrides*/
 @media (min-width: 1400px) {
   .movie-list {
