--- a/src/components/movie/Detail.css
+++ b/src/components/movie/Detail.css
@@ -13,7 +13,7 @@
 
 @media (min-width: 800px) {
   .movie-detail {
-    width: 50%;
+    width: 70%;
   }
 }
 
@@ -35,4 +35,9 @@
 
 .movie-detail__meta {
   margin: 20px 0 10px;
+}
+
+.text-left {
+  text-align: left;
+  padding: 0 2em;
 }
