login modal component added

--- a/src/components/layout/Header.scss
+++ b/src/components/layout/Header.scss
@@ -14,3 +14,10 @@
   color: #000000;
   text-decoration: none;
 }
+
+.login-modal {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+}
